+ CSP and improving API speeds. + Start work on Moods and Genres + Work on new stylesheet

--- a/src/global/01styles/base/_base.scss
+++ b/src/global/01styles/base/_base.scss
@@ -1,5 +1,12 @@
 @import "./sanitize";
-@import "./grid";
+@import "./variables";
+
 @import "./layout";
+@import "./typography";
+@import "./grid";
+@import "./forms";
+
 @import "./header";
 @import "./box";
+
+@import "./dropdown";
