--- a/src/global/01styles/base/_box.scss
+++ b/src/global/01styles/base/_box.scss
@@ -1,31 +1,31 @@
-.l-box {
-	position: relative;
+// .l-box {
+// 	position: relative;
 
-	max-width: $max-width;
-	padding: $small-spacing $base-spacing;
-	margin: auto;
-	border: $base-border;
-	background-color: transparentize($medium-gray, 0.85);
-}
-.l-box-empty {
-	position: relative;
+// 	max-width: $max-width;
+// 	padding: $small-spacing $base-spacing;
+// 	margin: auto;
+// 	border: $base-border;
+// 	background-color: transparentize($medium-gray, 0.85);
+// }
+// .l-box-empty {
+// 	position: relative;
 
-	max-width: $max-width;
-	border-radius: 0.8rem;
-	margin: 1em 1em 0em 1em;
+// 	max-width: $max-width;
+// 	border-radius: 0.8rem;
+// 	margin: 1em 1em 0em 1em;
 
-	color: $base-font-color;
-	padding: $small-spacing $base-spacing;
-	border: $base-border;
-	background-color: transparentize($color-gray, 0.95);
-}
+// 	color: $base-font-color;
+// 	padding: $small-spacing $base-spacing;
+// 	border: $base-border;
+// 	background-color: transparentize($color-gray, 0.95);
+// }
 
-.l-box-solid {
-	position: relative;
+// .l-box-solid {
+// 	position: relative;
 
-	max-width: $max-width;
-	padding: $small-spacing $base-spacing;
-	margin: auto;
-	border: $base-border;
-	background-color: $base-font-color;
-}
+// 	max-width: $max-width;
+// 	padding: $small-spacing $base-spacing;
+// 	margin: auto;
+// 	border: $base-border;
+// 	background-color: $base-font-color;
+// }
