--- a/src/global/01styles/base/_sanitize.scss
+++ b/src/global/01styles/base/_sanitize.scss
@@ -11,6 +11,46 @@
 	box-sizing: border-box;
 }
 
+:root {
+		/* ===== Scrollbar CSS ===== */
+		* {
+			scrollbar-gutter: 10px;
+			scrollbar-width: thin;
+			scrollbar-color: #c7c7c7 #5e5e5e2f;
+		}
+
+		*::-webkit-scrollbar {
+			width: 0.916667rem;
+			height: 0.916667rem;
+		}
+
+		*::-webkit-scrollbar-track {
+			background: #5e5e5e2f;
+			border-radius: 0.625rem;
+			height: 0.916667rem;
+			width: 100%;
+			background-clip: content-box;
+			border-radius: 10px;
+			border: transparent solid 0.0983333rem;
+		}
+
+		*::-webkit-scrollbar-thumb {
+			background-color: #e0e0e0a8;
+			border-radius: 0.5625rem;
+			width: 0.5625rem;
+			scrollbar-width: 0.625rem;
+			border: 0.25rem solid #b8b8b800;
+			background-clip: content-box;
+		}
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-tap-highlight-color: transparent;
+}
+
 /**
   * 1. Add text decoration inheritance in all browsers (opinionated).
   * 2. Add vertical alignment inheritance in all browsers (opinionated).
