--- a/src/global/vars.css
+++ b/src/global/vars.css
@@ -8,12 +8,12 @@
 	--dark-bottom: #111214;
 	--dark-base: #09090a;
 	--dark-top: #111214;
-	--dark-forms: #181a1aa9;
+	--dark-forms: #161718;
 	--dark-side: #0b0c0c;
 
 	--dim-bottom: rgb(20, 24, 32);
 	--dim-base: rgb(9 9 10);
 	--dim-top: rgb(20, 24, 32);
-	--dim-forms: #181a1ab7;
+	--dim-forms: #161718;
 	--dim-side: #0b0c0f;
 }
