--- a/src/global/01styles/base/_typography.scss
+++ b/src/global/01styles/base/_typography.scss
@@ -4,7 +4,8 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Commissioner", sans-serif, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'Commissioner', sans-serif, 'Segoe UI', Tahoma, Geneva, Verdana,
+		sans-serif;
 
 	line-height: 1.5;
 	font-weight: 500;
