--- a/src/global/scss/base/_fonts.scss
+++ b/src/global/scss/base/_fonts.scss
@@ -1,57 +1,5 @@
-/* FONTS                            */
-/* ================================ */
-/* commissioner-regular - latin */
-@font-face {
-	font-family: 'Commissioner';
-	font-style: normal;
-	font-display: swap;
-	font-weight: 400;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-regular.woff2') format('woff2'),
-		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* commissioner-300 - latin */
-@font-face {
-	font-family: 'Commissioner';
-	font-style: normal;
-	font-weight: 300;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-300.woff2') format('woff2'),
-		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* commissioner-600 - latin */
-@font-face {
-	font-family: 'Commissioner';
-	font-style: normal;
-	font-display: swap;
-	font-weight: 600;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-600.woff2') format('woff2'),
-		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* commissioner-500 - latin */
-@font-face {
-	font-family: 'Commissioner';
-	font-style: normal;
-	font-display: swap;
-	font-weight: 500;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-500.woff2') format('woff2'),
-		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* commissioner-700 - latin */
-@font-face {
-	font-family: 'Commissioner';
-	font-display: swap;
-	font-style: normal;
-	font-weight: 700;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-700.woff2') format('woff2'),
-		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
+@import "@fontsource/commissioner/400.css";
+@import "@fontsource/commissioner/500.css";
+@import "@fontsource/commissioner/600.css";
+@import "@fontsource/commissioner/700.css";
+// @import "@fontsource/commissioner/";
