--- a/src/global/scss/components/_player.scss
+++ b/src/global/scss/components/_player.scss
@@ -1,9 +1,15 @@
 .listButton {
+	-webkit-text-size-adjust: 100%;
+	align-self: center;
 	cursor: pointer;
-	display: inline;
-	left: 0;
-	margin-left: 0 !important;
-	z-index: 15;
+	display: inline-block;
+	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	max-height: 44pt;
+	max-width: 44pt;
+	margin: 10pt;
+	width: auto;
 }
 .player-title {
 	// background: rgb(0 0 0 / 96%);
@@ -45,7 +51,7 @@
 .player-container {
 	align-items: center;
 	// background: #19212e !important;
-	background-color: theme-color('dim', 'bottom');
+	background-color: theme-color("dim", "bottom");
 	// border-top: 1px ridge #272f3a;
 	bottom: 0;
 	display: flex;
@@ -79,7 +85,6 @@
 }
 .player {
 	height: 4rem;
-
 	z-index: auto;
 	align-items: center;
 	display: flex;
@@ -89,7 +94,7 @@
 	min-width: calc(100% - 40px);
 	width: auto;
 }
-input[type='range'].volume {
+input[type="range"].volume {
 	width: auto;
 	margin: 0;
 	max-width: 100%;
@@ -101,10 +106,10 @@ input[type='range'].volume {
 .menu-container {
 	transform: rotate(0deg);
 }
-input[type='range'].volume:focus {
+input[type="range"].volume:focus {
 	outline: none;
 }
-input[type='range'].volume::-webkit-slider-runnable-track {
+input[type="range"].volume::-webkit-slider-runnable-track {
 	background: rgba(71, 71, 71, 0.9);
 	border: 0;
 	width: 100%;
@@ -112,7 +117,7 @@ input[type='range'].volume::-webkit-slider-runnable-track {
 	max-height: 1rem;
 	cursor: pointer;
 }
-input[type='range'].volume::-webkit-slider-thumb {
+input[type="range"].volume::-webkit-slider-thumb {
 	// margin-top: -0.2px;
 	width: 100%;
 	max-width: 1rem;
@@ -125,10 +130,10 @@ input[type='range'].volume::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	box-shadow: -80px 0 0 80px #bdbdbdd0;
 }
-input[type='range'].volume:focus::-webkit-slider-runnable-track {
+input[type="range"].volume:focus::-webkit-slider-runnable-track {
 	background: #43463e;
 }
-input[type='range'].volume::-moz-range-track {
+input[type="range"].volume::-moz-range-track {
 	background: rgba(71, 71, 71, 0.9);
 	border: 0;
 	width: 100%;
@@ -136,7 +141,7 @@ input[type='range'].volume::-moz-range-track {
 	max-height: 1rem;
 	cursor: pointer;
 }
-input[type='range'].volume::-moz-range-thumb {
+input[type="range"].volume::-moz-range-thumb {
 	// margin-top: -0.2px;
 	width: 100%;
 	max-width: 1rem;
@@ -151,7 +156,7 @@ input[type='range'].volume::-moz-range-thumb {
 
 	box-shadow: -80px 0 0 80px #bdbdbdd0;
 }
-input[type='range'].volume::-ms-track {
+input[type="range"].volume::-ms-track {
 	background: transparent;
 	border-color: transparent;
 	border-width: 0.2px 0;
@@ -160,15 +165,15 @@ input[type='range'].volume::-ms-track {
 	height: 25.6px;
 	cursor: pointer;
 }
-input[type='range'].volume::-ms-fill-lower {
+input[type="range"].volume::-ms-fill-lower {
 	background: #0f100e;
 	border: 0;
 }
-input[type='range'].volume::-ms-fill-upper {
+input[type="range"].volume::-ms-fill-upper {
 	background: rgba(41, 43, 38, 0.9);
 	border: 0;
 }
-input[type='range'].volume::-ms-thumb {
+input[type="range"].volume::-ms-thumb {
 	width: 10px;
 	height: 26px;
 	background: rgba(255, 255, 236, 0.93);
@@ -178,16 +183,16 @@ input[type='range'].volume::-ms-thumb {
 	margin-top: 0px;
 	/*Needed to keep the Edge thumb centred*/
 }
-input[type='range'].volume:focus::-ms-fill-lower {
+input[type="range"].volume:focus::-ms-fill-lower {
 	background: rgba(43, 38, 38, 0.9);
 }
-input[type='range'].volume:focus::-ms-fill-upper {
+input[type="range"].volume:focus::-ms-fill-upper {
 	background: #43463e;
 }
 
 img::before,
 video::before {
-	content: '';
+	content: "";
 	display: block;
 	padding-top: calc(100% * 2 / 3);
 }
