--- a/src/global/01styles/base/_base.scss
+++ b/src/global/01styles/base/_base.scss
@@ -1,12 +1,12 @@
-@import "./sanitize";
-@import "./variables";
+@import './sanitize';
+@import './variables';
 
-@import "./layout";
-@import "./typography";
-@import "./grid";
-@import "./forms";
+@import './layout';
+@import './typography';
+@import './grid';
+@import './forms';
 
-@import "./header";
-@import "./box";
+@import './header';
+@import './box';
 
-@import "./dropdown";
+@import './dropdown';
