--- a/src/global/01styles/base/_forms.scss
+++ b/src/global/01styles/base/_forms.scss
@@ -1,4 +1,4 @@
-input:not([type="range"]):not([type="checkbox"]) {
+input:not([type='range']):not([type='checkbox']) {
 	appearance: none;
 	background: transparent;
 	border: none;
@@ -10,10 +10,10 @@ input:not([type="range"]):not([type="checkbox"]) {
 	letter-spacing: -0.02rem;
 	font-size: 100% !important;
 }
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
 	display: none;
 }
 .select {
@@ -23,7 +23,7 @@ input[type="search"]::-webkit-search-results-decoration {
 	font-size: 0.95rem;
 	font-weight: 500;
 	background-color: inherit;
-	grid-template-areas: "select end";
+	grid-template-areas: 'select end';
 	border-radius: var(--md-radius);
 	color: inherit;
 	width: 100%;
@@ -37,7 +37,7 @@ input[type="search"]::-webkit-search-results-decoration {
 		max-width: 8rem;
 	}
 	&::after {
-		content: "";
+		content: '';
 		place-self: end;
 		grid-area: end !important;
 		align-self: center;
@@ -92,7 +92,7 @@ select {
 }
 
 .input,
-input[type="search"] {
+input[type='search'] {
 	-webkit-appearance: none;
 	// background: #1d242e;
 	color: #fff;
@@ -121,11 +121,12 @@ input[type="search"] {
 	&:focus-within {
 		// background: #262e38;
 		background-color: #16181fa8 !important;
-		box-shadow: inset 0em 0.1em 0.6em 0em hsla(0, 0%, 96.9%, 0.114), 0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
+		box-shadow: inset 0em 0.1em 0.6em 0em hsla(0, 0%, 96.9%, 0.114),
+			0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
 		transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
 	}
 }
-input :not([type="range"]) :not([type="checkbox"]) {
+input :not([type='range']) :not([type='checkbox']) {
 	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
 	font-family: inherit;
 	width: auto;
@@ -145,7 +146,7 @@ input :not([type="range"]) :not([type="checkbox"]) {
 	height: 100%;
 	&::before {
 		// padding: 2em;
-		content: "";
+		content: '';
 		align-self: center;
 		position: absolute;
 		margin-right: 0.7rem;
