--- a/src/global/scss/base/_forms.scss
+++ b/src/global/scss/base/_forms.scss
@@ -25,7 +25,7 @@ legend {
 label {
 	display: block;
 	font-weight: 500;
-	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-variant-caps: all-small-caps;
 	// margin-bottom: $small-spacing * 0.5;
 }
@@ -34,18 +34,18 @@ textarea {
 	resize: vertical;
 }
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
 	display: inline;
 	font-family: initial;
 	margin-right: $small-spacing * 0.5;
 }
 
-[type="file"] {
+[type='file'] {
 	margin-bottom: $small-spacing;
 	width: 100%;
 }
-input:not([type="range"]):not([type="checkbox"]) {
+input:not([type='range']):not([type='checkbox']) {
 	appearance: none;
 	background: transparent;
 	border: none;
@@ -57,15 +57,15 @@ input:not([type="range"]):not([type="checkbox"]) {
 	letter-spacing: -0.02rem;
 	font-size: 100% !important;
 }
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
 	display: none;
 }
 
 .input,
-input[type="search"] {
+input[type='search'] {
 	-webkit-appearance: none;
 	// background: #1d242e;
 	color: #fff;
@@ -82,12 +82,13 @@ input[type="search"] {
 .input {
 	display: grid;
 	grid-template-columns: 1fr 31px;
-	grid-template-areas: "start end";
+	grid-template-areas: 'start end';
 	position: relative;
 	background-color: transparent;
 	border: 0.0625rem solid hsla(0, 0%, 66.7%, 0.219);
 	border-radius: 0.2em;
-	box-shadow: inset 0.1125em -0.1125em 1em 0.5em hsla(0, 0%, 96.9%, 0.014), 0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
+	box-shadow: inset 0.1125em -0.1125em 1em 0.5em hsla(0, 0%, 96.9%, 0.014),
+		0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
 	transition: all 0.1s cubic-bezier(0.47, 0.25, 0.745, 0.715);
 	width: 100%;
 	&:active,
@@ -98,7 +99,7 @@ input[type="search"] {
 		transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
 	}
 }
-input :not([type="range"]) :not([type="checkbox"]) {
+input :not([type='range']) :not([type='checkbox']) {
 	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
 	font-family: inherit;
 	width: auto;
