--- a/src/lib/shared/listPages.scss
+++ b/src/lib/shared/listPages.scss
@@ -100,6 +100,7 @@ hr {
 	position: relative;
 	aspect-ratio: 1/1;
 	height: auto;
+	align-self: center;
 	width: 100%;
 	img {
 		box-shadow: 0 0 1.5rem 0.125rem rgb(0 0 0 / 37%);
