--- a/src/global/scss/base/_fonts.scss
+++ b/src/global/scss/base/_fonts.scss
@@ -1,3 +1,4 @@
+@import "@fontsource/commissioner/index.css";
 @import "@fontsource/commissioner/400.css";
 @import "@fontsource/commissioner/500.css";
 @import "@fontsource/commissioner/600.css";
