--- a/src/global/scss/base/_layout.scss
+++ b/src/global/scss/base/_layout.scss
@@ -13,8 +13,15 @@ html {
 
 html,
 body {
-	height: 100%;
+	// height: 100%;
 	line-height: 1.5;
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
 
 body {
