--- a/src/global/scss/components/_player.scss
+++ b/src/global/scss/components/_player.scss
@@ -88,10 +88,12 @@
 	align-items: unset;
 	display: flex;
 	flex-direction: row;
+	// position: absolute;
+	// bottom: 0;
 	justify-content: space-evenly;
 	max-width: 100%;
 	min-width: calc(100% - 40px);
-	width: auto;
+	width: 100%;
 	/* max-height: 100%; */
 }
 input[type="range"].volume {
