--- a/src/global/scss/modules/_dropdown.scss
+++ b/src/global/scss/modules/_dropdown.scss
@@ -7,6 +7,7 @@
 	align-items: center;
 	cursor: pointer;
 	margin: 0;
+	color: #fcfcfc;
 	.list-icon {
 		display: inline;
 	}
@@ -19,7 +20,7 @@
 	border-bottom: #313338 solid 0.0714rem;
 
 	&:hover {
-		background: #313338;
+		background: #7e818b4f;
 		transition: cubic-bezier(0.25, 0.46, 0.45, 0.94) all 0.1s;
 	}
 }
@@ -52,4 +53,11 @@
 	transform: translateY(-3.25rem);
 	flex-direction: column;
 	flex-wrap: nowrap;
+	.dd-item * {
+		color: #fcfcfc !important;
+	}
+}
+
+:root .light .dd-menu {
+	background-color: #cecece;
 }
